# nodeManagerServer

./: CMakeLists.txt  ReadMe.md  http接口文档.docx  main.cpp  profile.json  解决问题记录.txt
3rd/log/: log4z.cpp  log4z.h  mainLog.cpp  mainLog.h
client/: CMakeLists.txt  ClientConnect.cpp  ClientConnect.h  def.h  epollServer.cpp  handleEvent.cpp  handleEvent.h  libeventClient.cpp  main.cpp
common/: commondef.h  dataProtocolHead.cpp  dataProtocolHead.h  jsonCodec.cpp  jsonCodec.h  pbCodec.cpp  pbCodec.h  utils.cpp  utils.h
core/: itask.h  threadPool.cpp  threadPool.h  xthread.cpp  xthread.h
proto/: message.proto
serverDiscover/: global.cpp  global.h  httpReq.cpp  httpReq.h  message.pb.cpp  message.pb.h  msgIdDef.h  nodeConnect.cpp  nodeConnect.h  nodeLoginReq.cpp  nodeLoginReq.h
